<resources>
    <string name="app_name">Volume Icon</string>
    <string name="service_description">Show volume icon in the notification bar</string>
    <string name="settings">Settings</string>
    <string name="always">Always</string>
    <string name="never">Never</string>
    <string name="when_muted">When muted</string>
    <string name="when_not_muted">When not muted</string>
    <string name="show_notification">Show notification</string>
    <string name="volume_icon_notification">Volume icon notification</string>
    <string name="volume_level">Volume level: %d%%</string>
    <string name="volume_is_muted">Volume is muted</string>
    <string name="icon_theme">Icon theme</string>
    <string name="solid">Solid</string>
    <string name="rounded">Rounded</string>
    <string name="light">Light</string>
    <string name="system_notifications_settings">System notifications settings</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="volume_adjusting_tweaks">Volume adjusting tweaks</string>
    <string name="system_behavior">System behavior</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="volume_buttons_sound">Volume buttons sound</string>
    <string name="hide_volume_slider">Hide volume slider</string>
    <string name="hide_volume_slider_description">Don\'t show volume slider when you change volume using buttons</string>
    <string name="service_is_not_running">Service is not running</string>
    <string name="notification_for_builtin_only">Show notification for built-in speaker only</string>
    <string name="notification_for_builtin_only_summary">Hide notification if current sound output is headphones or other external device</string>
    <string name="bluetooth_device">Bluetooth device</string>
    <string name="headphones">Headphones</string>
    <string name="builtin_speaker">Built-in speaker</string>
    <string name="other_device">Other device</string>
    <string name="output_label_template" translatable="false">%1$s (%2$s)</string>
    <string name="show_popup_message">Show pop-up message</string>
    <string name="show_volume_control">Show volume slider</string>
    <string name="none">None</string>
    <string name="notification_for_muted_music">Notify if active muted playback</string>
    <string name="notification_for_muted_music_summary">Show notification if you have an active media playback (e.g. music player) but volume is muted</string>
</resources>